# lsc_cctv

./: .gitignore  MonitoringSystem.sln  README.md  cctv.sh  fk.sh  sonar-project.properties
.github/workflows/: codeql-analysis.yml
CCTV/: CCTV.cpp  CCTV.vcxproj  CCTV.vcxproj.filters  FakeCCTV.cpp
Certificates/: client.crt  client.csr  client.key  client.key.passwd  client_f.crt  client_f.csr  client_f.key  client_f.key.passwd  command_to_make_certificate_and_key.md  fnk.blob  register_keys.sh  register_server_key.sh  rootca.csr  rootca.key  rootca.srl  rootca_f.crt  rootca_f.csr  rootca_f.key  rootca_f.srl  server.crt  server.csr  server.pem  server_f.crt  server_f.csr  server_f.key  server_f.pem  server_rsa.csr  server_rsa.key.passwd
Common/: SG_InputBox.cpp  SG_InputBox.h  SG_InputBoxLib.h  TcpSendRecvJpeg.cpp  TcpSendRecvJpeg.h  utils.cpp  utils.h
LgFaceRecDemoTCP_Jetson_NanoV2/: .gitignore  CMakeLists.txt  README.md  acl.sh  cctv.sh  clean.sh
LgFaceRecDemoTCP_Jetson_NanoV2/MTCNN_FaceDetection_TensorRT/src/: network.cpp  network.h
LgFaceRecDemoTCP_Jetson_NanoV2/UserRegister/: main.cpp
LgFaceRecDemoTCP_Jetson_NanoV2/src/: NetworkTCP.cpp  NetworkTCP.h  accessHistory.cpp  accessHistory.h  baseEngine.cpp  cctvCrypto.cpp  cctvCrypto.h  common.cpp  common.h  faceNet.cpp  faceNet.h  key_manager.cpp  key_manager.h  logger.cpp  logger.h  main.cpp  resourceManager.cpp  resourceManager.h  sslConnect.cpp  sslConnect.h
LgFaceRecDemoTCP_Jetson_NanoV2/src/cryptoTest/: cryptoTest.cpp
MonitoringSystem/: MonitoringSystem.cpp  MonitoringSystem.vcxproj  MonitoringSystem.vcxproj.filters  README.md  SslConnect.cpp  SslConnect.h  WindowsKeyStoreAdapter.cpp  WindowsKeyStoreAdapter.h
RecvImageTCP_java/: RecvImageTCP.java
RecvImageUDP/: RecvImageUDP.cpp
documents/: Risk Assessment.xlsx  Security Requirement_Mitigation_TCs.xlsx
documents/phase1/: CCTV_ThreatList_STRIDE_and_PnG.xlsx  Test Case results report.xlsx  static-analysis report.xlsx
documents/phase2/submaterials/: Static_analysis-flawfinder-5team.xlsx  Testcase Analysis.xlsx
flawfinder/: README.md  get_flaws.sh  histlist-20210614-183330.hit  histlist-20210614-183330.txt
key/: server.key
keys/: client.pfx  register_keys.sh  rootca.crt  server.key
reports/: report.html
